--- a/Week4HW/Week4HW.html
+++ b/Week4HW/Week4HW.html
@@ -5,39 +5,40 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Week4style.css"/>
+  <main>
   <title>Passport Paradise</title>
-  <script src="week4index.js"></script>
+
 </head>
+<script src="week4index.js"></script>
 <body>
 
   <h1>
-Welcome to Passport Paradise!
+Welcome to Passport Paradise! <button>Sign Up</button> <button id="login">Log In</button>
 </h1>
 
   <p>
-At Passport Paradise we are specialized in planning wedding and honeymoon vacations, girls/guys trips, solo trips and more. <br>
+At Passport Paradise we specialized in planning wedding and honeymoons, girls/guys trips, solo trips and more. <br>
 We are very affordable with prices starting at $100-2,000 dollars. All of our travel agents has at least 10 years in <br>
 the travel industry. Check out our latest travel packages and last minute travel deals! View our popular destinations.
-
   </p>
   <h2>Our Popular International Destinations</h2>
 <ul>
-  <li>Aruba</li>
+  <li class="places">Aruba</li>
   <li>Italy</li>
-  <li>Barbados</li>
+  <li class="places">Barbados</li>
   <li>Canada</li>
 </ul>
 
 <div>
-<img src="beachvibes.jpg"/>
+<img src="beachvibes.jpg" atl="Beach Vibes" width="1150" height="400">
 </div>
 
 <h2>Our Popular Domestic Destinations</h2>
 <ol>
   <li>Florida</li>
-  <li>New York</li>
+  <li class="places">New York</li>
   <li>Las Vegas</li>
-  <li>California</li>
+  <li class="places">California</li>
 </ol>
 
 <h3>For information check out the links below</h3>
@@ -46,7 +47,7 @@ the travel industry. Check out our latest travel packages and last minute travel
 
 <footer>
   <p>&#169; 2023 Passport Paradise. All Rights Reserved. </p>
-
 </footer>
 </body>
+</main>
 </html>
