--- a/Week4HW/index.html
+++ b/Week4HW/index.html
@@ -5,17 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Week4style.css"/>
-  <main>
+
   <title>Passport Paradise</title>
 
 </head>
-<script src="week4index.js"></script>
+<script src="index.js"></script>
 <body>
-
+  <main>
+    <header>
   <h1>
 Welcome to Passport Paradise! <button>Sign Up</button> <button id="login">Log In</button>
 </h1>
-
+</header>
   <p>
 At Passport Paradise we specialized in planning wedding and honeymoons, girls/guys trips, solo trips and more. <br>
 We are very affordable with prices starting at $100-2,000 dollars. All of our travel agents has at least 10 years in <br>
@@ -48,6 +49,6 @@ the travel industry. Check out our latest travel packages and last minute travel
 <footer>
   <p>&#169; 2023 Passport Paradise. All Rights Reserved. </p>
 </footer>
-</body>
 </main>
+</body>
 </html>
