--- a/Week4HW/index.html
+++ b/Week4HW/index.html
@@ -31,7 +31,7 @@ the travel industry. Check out our latest travel packages and last minute travel
 </ul>
 
 <div>
-<img src="beachvibes.jpg" atl="Beach Vibes" width="1150" height="400">
+<img src="./VSImages/beachvibes.jpg" atl="Beach Vibes" width="1150" height="400">
 </div>
 
 <h2>Our Popular Domestic Destinations</h2>
